[package]
name = "ncmdump-rs"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.6"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[build-dependencies]
cc = "1.0"